<resources>
    <string name="app_name">EcoDiF Mobile HTTP</string>

<!--  -->
<string name="action_settings">Settings</string>
<!--  -->
<string name="http">Endereço de destino:</string>
<string name="http_latitude">Endereço de destino da latitude:</string>
<string name="http_longitude">Endereço de destino da longitude:</string>
<string name="http_x">Endereço de destino dos dados do eixo X:</string>
<string name="http_y">Endereço de destino dos dados do eixo Y:</string>
<string name="http_z">Endereço de destino dos dados do eixo Z:</string>
<!--  -->
<string name="datastream">Datastream:</string>
<string name="datastream_latitude">Datastream (latitude):</string>
<string name="datastream_longitude">Datastream (longitude):</string>
<string name="datastream_x">Datastream do eixo X:</string>
<string name="datastream_y">Datastream do eixo Y:</string>
<string name="datastream_z">Datastream do eixo Z:</string>
<!-- Botões -->
<string name="start">Iniciar</string>
<string name="stop">Parar</string>
<string name="register">Registrar</string>
<!--  -->
<string name="location_latitude">Latitude:</string>
<string name="location_longitude">Longitude:</string>
<!--  -->
<string name="interval">Intervalo entre Transmissões (em segundos):</string>
<!--  -->
<string name="luminosity">Luminosidade:</string>
<string name="latitude">Latitude:</string>
<string name="longitude">Longitude:</string>
<string name="temperature">Temperatura:</string>
<string name="X">X:</string>
<string name="Y">Y:</string>
<string name="Z">Z:</string>
<string name="acc_X">Aceleração (eixo X):</string>
<string name="acc_Y">Aceleração (eixo Y):</string>
<string name="acc_Z">Aceleração (eixo Z):</string>
<string name="mag_X">Campo Magnético (eixo X):</string>
<string name="mag_Y">Campo Magnético (eixo Y):</string>
<string name="mag_Z">Campo Magnético (eixo Z):</string>
<string name="rot_X">Rotação no eixo X:</string>
<string name="rot_Y">Rotação no eixo Y:</string>
<string name="rot_Z">Rotação no eixo Z:</string>
<string name="gyr_X">Taxa rotação no eixo X:</string>
<string name="gyr_Y">Taxa rotação no eixo Y:</string>
<string name="gyr_Z">Taxa rotação no eixo Z:</string>
<string name="grav_X">Gravidade (eixo X):</string>
<string name="grav_Y">Gravidade (eixo Y):</string>
<string name="grav_Z">Gravidade (eixo Z):</string>
<string name="orientation">Orientação:</string>
<string name="ori_x">Ângulo em torno do eixo X:</string>
<string name="ori_y">Ângulo em torno do eixo Y:</string>
<string name="ori_z">Ângulo em torno do eixo Z:</string>
<string name="proximity">Distância: </string>
<string name="pressure">Pressão Atmosférica:</string>

<!-- Títulos de Tela -->
<string name="luminosityActivityTitle">EcoDiF - Luminosidade</string>
<string name="locationActivityTitle">EcoDiF - Localização</string>
<string name="internalTemperatureTitle">EcoDiF - Temperatura Ambiente</string>
<string name="internalTemperatureActivityTitle">EcoDiF - Temperatura Interna</string>
<string name="ambientTemperatureTitle">EcoDiF - Temperatura Interna</string>
<string name="ambientTemperatureActivityTitle">EcoDiF - Temperatura Interna</string>
<string name="orientationTitle">EcoDiF - Orientação</string>
<string name="orientationActivityTitle">EcoDiF - Orientação</string>
<string name="accelerometerTitle">EcoDiF - Acelerômetro</string>
<string name="accelerometerActivityitle">EcoDiF - Acelerômetro</string>
<string name="accelerometerActivityTitle">EcoDiF - Acelerômetro</string>
<string name="magneticFieldActivityTitle">EcoDiF - Campo Magnético</string>
<string name="gyroscopeActivityTitle">EcoDiF - Giroscópio</string>
<string name="gravityActivityTitle">EcoDiF - Gravidade</string>
<string name="soundLevelActivityTitle">EcoDiF - Decibelímetro</string>
<string name="proximityActivityTitle">EcoDiF - Proximidade</string>
<string name="pressureActivityTitle">EcoDiF - Pressão Atmosférica</string>
<!-- Mensagens dos Toasts -->
<string name="onCreateInternalTemperature">Sensoreamento da temperatura interna inicializando.</string>

</resources>