<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical" >

        <!-- Eixo X: -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_x" />

        <EditText
            android:id="@+id/httpUrl_x_ET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datastream_x" />

        <EditText
            android:id="@+id/datastream_x_ET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
        
        <!-- Eixo Y -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_y" />

        <EditText
            android:id="@+id/httpUrl_y_ET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datastream_y" />

        <EditText
            android:id="@+id/datastream_y_ET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <!-- Eixo Z -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_z" />

        <EditText
            android:id="@+id/httpUrl_z_ET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datastream_z" />

        <EditText
            android:id="@+id/datastream_z_ET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
        
        <!-- Intervalo  -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interval" />

        <EditText
            android:id="@+id/intervalTimeET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="number" />

        <!-- Botões -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- Iniciar -->
            <Button
                android:id="@+id/bStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickStartService"
                android:text="@string/start" >
            </Button>

            <!-- Parar -->
            <Button
                android:id="@+id/bStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickStopService"
                android:text="@string/stop" >
            </Button>
        </LinearLayout>

        <!-- Resultado X -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grav_X"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/xResultTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" >
        </TextView>
        
        <!-- Resultado Y -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grav_Y"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/yResultTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" >
        </TextView>
        
        <!-- Resultado Z -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grav_Z"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/zResultTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

</ScrollView>